# 12-vision-connect-ios-linphone

./: PrayerLine-Info.plist  linphone-Info.plist  main.m
Classes/: ChatViewController.m  DialerViewController.m  LaunchScreen.xib  LinphoneCoreSettingsStore.m  LinphoneIOSVersion.h  LinphoneManager.m  PhoneMainView.m  SettingsViewController.m  WizardViewController.m
Netcastdigital/: Netcastdigital-Info.plist  Netcastdigital-Prefix.pch  main.m
PrayerLine.xcodeproj/: project.pbxproj
Resources/: number_four.psd
libPhoneNumber/: NBPhoneNumberUtil.m
linphone.xcodeproj/: project.pbxproj
submodules/libilbc-rfc3951/downloads/: Makefile.am
www/: index.html  login.html  logout.html  manage-connect-edit.html  manage-connects.html  manage-trusted-number-edit.html  manage-trusted-numbers.html  package-add-cloud-tariffs.html  package-add-data-tariffs.html  package-add-roaming-tariffs-add-countres.html  package-add-roaming-tariffs.html  package-add-voice-tariffs.html  package-add.html  package-details.html  packages.html  password-forgot.html  password-reset.html  payment-completed.html  payment-create-quickteller.html  payment-create.html  prayer-line-message.html  prayer-line-messages.html  prayer-line-messages_1.html  prayer-line-play-list.html  prayer-line-play-list_1.html  prayer-line-player.html  prayer-line-rooms.html  prayer-line-stream.html  prayer-line.html  register.html  roaming.html  rule-edit.html  schedule-edit.html  spec.html  support-ticket-create.html  support-tickets-closed.html  support-tickets-list.html  support.html  ticket-detail-comments.html  (+3 more)
(+347 files in other folders)
